<resources>

    <!-- % character: &#37; DO NOT USE -->
    <!-- - character: &#8211; -->
    <!-- : character: &#58; -->

    <string name="app_name">Log.Thoughts</string>

    <!-- Main Activities -->
    <string name="help_tap">More help</string>
    <string name="next">next</string>
    <string name="prev_win_sorry">Sorry, we\'re having trouble displaying this right now.</string>
    <string name="empty_bundle">Problem finding this info.</string>

    <!-- Sit Activity -->
    <string name="sit_display1">Situation</string>
    <string name="sit_sub">Who? What? When? Where?</string>
    <string name="sit_hint">4pm. At home, sorting laundry.</string>

    <!-- Moods Activity -->
    <string name="moods_display1">Moods</string>
    <string name="moods_sub">List your moods and rate them on a scale of 0&#8211;100.</string>
    <string name="moods_hint" formatted="false">Anxious 60%\nAngry 25%\nTense muscles 15%</string>

    <!-- Auto Activity -->
    <string name="auto_display1">Thoughts and Images</string>
    <string name="auto_sub">Write down the first thoughts and images that come to mind. Choose one as your \'Hot Thought.\'</string>
    <string name="auto_hint" formatted="false">I\'m just not good enough</string>
    <string name="hot_thought">Write your Hot Thought here</string>

    <!-- Pro Activity -->
    <string name="pro_display1">Evidence For the Hot Thought</string>
    <string name="pro_sub">Factual information that proves that the Hot Thought might be true.</string>
    <string name="pro_prev_head">Your Hot Thought</string>
    <string name="pro_hint" formatted="false">I\'ve seen this happen before</string>

    <!-- Con Activity -->
    <string name="con_display1">Evidence Against the Hot Thought</string>
    <string name="con_sub">Factual information that proves that the Hot Thought might be false.</string>
    <string name="con_hint" formatted="false">Things can always change</string>

    <!-- Alt Activity -->
    <string name="alt_display1">Balanced Thoughts</string>
    <string name="alt_sub">Use your evidence for and evidence against your Hot Thought to write down some balanced or alternative thoughts.</string>
    <string name="alt_prev_pro_head">Pro Thoughts</string>
    <string name="alt_prev_con_head">Con Thoughts</string>
    <string name="alt_hint" formatted="false">Things haven\'t gone well lately, but I know tomorrow will be better</string>

    <!-- Now Activity -->
    <string name="now_display1">Moods Now</string>
    <string name="now_sub">List your moods after doing this activity and rate them on a scale of 0&#8211;100.</string>
    <string name="now_prev_head">Your moods before</string>
    <string name="now_hint" formatted="false">Anxious 40%\nAngry 0%\nTense muscles 10%</string>
    <!-- End Main Activities -->

    <!-- Help Activities -->

    <!-- Sit Help -->
    <string name="sit_head">Describing your situation</string>
    <string name="sit_help_text_start">When describing your situation, be as descriptive as possible. It\'s important to note your surroundings.</string>
    <string name="sit_help_text_questart">A few helpful questions you can ask yourself are&#58;</string>
    <string name="sit_help_text_quests">1. Who was I with?\n2. What was I doing?\n3. When did it happen?\n4. Where was I?</string>
    <string name="sit_help_text_time">Include a specific time frame that does not exceed 30 minutes. For example, there are too many different situations, emotions, and thoughts that can occur \"all day Tuesday.\" A better description might be \"Tuesday at noon.\"</string>
    <string name="sit_help_text_good">Good example&#58;\n\"Friday morning at 8. Making coffee. Kids are getting ready for school. Husband is watching the news.\"</string>
    <string name="sit_help_text_bad">Bad example&#58;\n"Friday before work. Very loud. Irritated at husband."</string>

    <!-- Moods Help -->
    <string name="moods_head">Rating your moods</string>
    <string name="moods_help_start">List the moods you were experiencing in the situation you described. It\'s natural to experience more than one mood in any situation. You should also rate the intensity of the moods on a scale of 0&#8211;100.</string>
    <string name="moods_help_phys">If you experience a lot of anxiety, it may be helpful to rate your physical symptoms as well.</string>
    <string name="moods_help_prex">For example&#58;</string>
    <string name="moods_help_ex" formatted="false">\"Increased heart rate 65%.\"</string>
    <string name="moods_help_def">Moods are more than simply feeling \"bad\" or \"good.\" They can also be easily confused with thoughts. As a rule of thumb, if you\'re describing a mood in more than one word, you should ask yourself whether it\'s really a mood, or more of a thought.</string>
    <string name="moods_help_defex">For example, you might feel tense and nervous and out of control, when the mood you\'re experiencing is anxiety. Or, you may feel hollow, numb and heavy when the mood you\'re experiencing is depression.</string>
    <string name="moods_help_good">What it should look like&#58;</string>
    <string name="moods_help_goodex1" formatted="false">\"Anxious 25%\"</string>
    <string name="moods_help_goodex2" formatted="false">\"Angry 70%\"</string>
    <string name="moods_help_goodex3" formatted="false">\"Tense muscles 30%\"</string>
    <string name="moods_help_bad">What it shouldn\'t look like&#58;</string>
    <string name="moods_help_badex1" formatted="false">\"Mad at myself 20%\"</string>
    <string name="moods_help_badex2" formatted="false">\"Angry all the time\"</string>
    <string name="moods_help_badex3" formatted="false">\"Sick with the flu\"</string>

    <!-- Auto Help -->

    <!-- Pro Help -->

    <!-- Con Help -->

    <!-- Alt Help -->

    <!-- Now Help -->

    <!-- End Help Activities -->


    <!-- Summary Activities -->
    <!-- End Summary Activities -->


</resources>
