<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deeppurple_100"
    android:orientation="vertical"
    tools:context="com.example.android.logthoughts.ProActivity">

    <!-- DISPLAY 1 -->
    <TextView
        android:id="@+id/pro_display1"
        style="@style/headline_help_text"
        android:layout_marginLeft="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginEnd="72dp"
        android:text="@string/pro_display1" />

    <!-- SUBHEADING -->
    <TextView
        android:id="@+id/pro_sub"
        style="@style/subheading"
        android:layout_below="@id/pro_display1"
        android:text="@string/pro_sub"/>

    <!-- HELP TAPPABLE -->
    <TextView
        android:id="@+id/help_text"
        style="@style/help_tap"
        android:textColor="@color/deeppurple_400"
        android:layout_below="@id/pro_sub"
        android:text="@string/help_tap"/>

    <!-- PREV HEADING -->
    <TextView
        android:id="@+id/pro_prev_head"
        style="@style/prev_head"
        android:layout_below="@id/help_text"
        android:text="@string/pro_prev_head"/>

    <!-- PREV WINDOW -->
    <TextView
        android:id="@+id/pro_prev_win"
        style="@style/prev_win"
        android:layout_below="@id/pro_prev_head"
        android:text="@string/prev_win_sorry"/>

    <!-- EDITTEXT -->
    <EditText
        android:id="@+id/pro"
        style="@style/edittext"
        android:backgroundTint="@color/deeppurple_600"
        android:layout_below="@id/pro_prev_win"
        android:hint="@string/pro_hint" />

    <!-- NEXT -->
    <Button
        android:id="@+id/next_pro"
        style="@style/next_button"
        android:layout_below="@id/pro" />

</RelativeLayout>