<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.logthoughts.SitHelpActivity"
    android:background="@color/lightblue_100" >

    <!-- TECHNICAL ROOT LAYOUT -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- HEADLINE -->
        <!-- in SIT HELP -->
        <TextView
            android:id="@+id/sit_help_head"
            style="@style/headline_help_text"
            android:text="@string/sit_head" />

        <!-- START -->
        <!-- in SIT HELP TEXT BODY 1 -->
        <TextView
            android:id="@+id/sit_help_text_start"
            style="@style/body_help_text"
            android:layout_below="@id/sit_help_head"
            android:layout_marginTop="32dp"
            android:text="@string/sit_help_text_start" />

        <!-- QUESTART -->
        <!-- in SIT HELP TEXT BODY 1 -->
        <TextView
            android:id="@+id/sit_help_text_questart"
            style="@style/body_help_text"
            android:layout_below="@id/sit_help_text_start"
            android:text="@string/sit_help_text_questart" />

        <!-- QUESTS -->
        <!-- in SIT HELP TEXT BODY 1 -->
        <TextView
            android:id="@+id/sit_help_text_quests"
            style="@style/body_help_text"
            android:layout_below="@id/sit_help_text_questart"
            android:text="@string/sit_help_text_quests" />

        <!-- TIME -->
        <!-- in SIT HELP TEXT BODY 1 -->
        <TextView
            android:id="@+id/sit_help_text_time"
            style="@style/body_help_text"
            android:layout_below="@id/sit_help_text_quests"
            android:text="@string/sit_help_text_time" />

        <!-- GOOD -->
        <!-- in SIT HELP TEXT BODY 1 -->
        <TextView
            android:id="@+id/sit_help_text_good"
            style="@style/body_help_text"
            android:layout_below="@id/sit_help_text_time"
            android:text="@string/sit_help_text_good" />

        <!-- BAD -->
        <!-- in SIT HELP TEXT BODY 1 -->
        <TextView
            android:id="@+id/sit_help_text_bad"
            style="@style/body_help_text"
            android:layout_below="@id/sit_help_text_good"
            android:text="@string/sit_help_text_bad" />

    </RelativeLayout>

</ScrollView>