<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink_100"
    tools:context="com.example.android.logthoughts.NowActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- DISPLAY 1 -->
        <TextView
            android:id="@+id/now_display1"
            style="@style/display1"
            android:text="@string/now_display1" />

        <!-- SUBHEADING -->
        <TextView
            android:id="@+id/now_sub"
            style="@style/subheading"
            android:layout_below="@id/now_display1"
            android:text="@string/now_sub" />

        <!-- HELP TAPPABLE -->
        <TextView
            android:id="@+id/help_text"
            style="@style/help_tap"
            android:layout_below="@id/now_sub"
            android:text="@string/help_tap"
            android:textColor="@color/pink_400" />

        <!-- PREV HEADING -->
        <TextView
            android:id="@+id/now_prev_head"
            style="@style/prev_head"
            android:layout_below="@id/help_text"
            android:text="@string/now_prev_head" />

        <!-- PREV WINDOW -->
        <TextView
            android:id="@+id/now_prev_win"
            style="@style/prev_win"
            android:layout_below="@id/now_prev_head"
            android:text="@string/prev_win_sorry" />

        <!-- EDITTEXT -->
        <EditText
            android:id="@+id/now"
            style="@style/edittext"
            android:layout_below="@id/now_prev_win"
            android:backgroundTint="@color/pink_400"
            android:hint="@string/now_hint" />

        <!-- NEXT -->
        <Button
            android:id="@+id/next_now"
            style="@style/next_button"
            android:layout_below="@id/now" />

    </RelativeLayout>
</ScrollView>