<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgreen_200"
    android:orientation="vertical"
    tools:context="com.example.android.logthoughts.AutoActivity">

    <!-- DISPLAY 1 -->
    <TextView
        android:id="@+id/auto_display1"
        style="@style/display1"
        android:text="@string/auto_display1" />

    <!-- SUBHEADING -->
    <TextView
        android:id="@+id/auto_sub"
        style="@style/subheading"
        android:layout_below="@id/auto_display1"
        android:text="@string/auto_sub"/>

    <!-- HELP TAPPABLE -->
    <TextView
        android:id="@+id/help_text"
        style="@style/help_tap"
        android:textColor="@color/lightgreen_800"
        android:layout_below="@id/auto_sub"
        android:text="@string/help_tap"/>

    <!-- EDITTEXT -->
    <EditText
        android:id="@+id/auto"
        style="@style/edittext"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/lightgreen_800"
        android:layout_below="@id/help_text"
        android:hint="@string/auto_hint" />

    <!-- HOT EDITTEXT -->
    <EditText
        android:id="@+id/auto_hot"
        style="@style/edittext"
        android:backgroundTint="@color/lightgreen_800"
        android:layout_below="@id/auto"
        android:hint="@string/hot_thought" />

    <!-- NEXT -->
    <Button
        android:id="@+id/next_auto"
        style="@style/next_button"
        android:layout_below="@id/auto_hot" />

</RelativeLayout>
